--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,16 +17,19 @@ body {
 }
 
 #top-main {
-    background-color: black;
+    background-color: rgb(28, 147, 169);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 992px) {
     #top-main {
         background-color: transparent;
     }
-
 }
 
+/* HERO */
+#hero-section {
+    padding-top: 66px;
+}
 
 /* QUIENES SOMOS */
 .qs-icontainer {
@@ -60,7 +63,6 @@ body {
 #footer a {
     color: white;
 }
-
 
 
 /* BOOTSTRAP */
